--- a/src/index.html
+++ b/src/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mapit</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.1/dist/leaflet.css" integrity="sha256-sA+zWATbFveLLNqWO2gtiw3HL/lh1giY/Inf1BJ0z14=" crossorigin="" />
     <script defer src="https://unpkg.com/leaflet@1.9.1/dist/leaflet.js" integrity="sha256-NDI0K41gVbWqfkkaHj15IzU7PtMoelkzyKp8TOaFQ3s=" crossorigin=""></script>
-    <script defer src="/js/script.js"></script>
+    <script defer src="./js/script.js"></script>
 </head>
 <body>
     <div class="side-bar">
-        <img src="/img/logo.png" alt="mapty logo" class="mapty-logo">
+        <img src="./img/logo.png" alt="mapty logo" class="mapty-logo">
         <ul class="act-box">
             <form class="act-form hidden" id="act-form">
                 <div class="act-box_row">
@@ -40,36 +40,6 @@
             </div>
             <button type="submit"></button>
             </form>
-            <!--- <li class="workout workout--running">
-                <h2 class="workout__title">Running on August 02</h2>
-                <div class="workout__details">
-                    <span class="workout__value">distance</span>
-                    <span class="workout__unit">km</span>
-                </div>
-                <div class="workout__details">
-                    <span class="workout__value">duration</span>
-                    <span class="workout__unit">min</span>
-                </div>
-                <div class="workout__details">
-                    <span class="workout__value">candence</span>
-                    <span class="workout__unit">km/min</span>
-                </div>
-            </li>
-            <li class="workout workout--cycling">
-                <h2 class="workout__title">Cycling on August 02</h2>
-                <div class="workout__details">
-                    <span class="workout__value">distance</span>
-                    <span class="workout__unit">km</span>
-                </div>
-                <div class="workout__details">
-                    <span class="workout__value">duration</span>
-                    <span class="workout__unit">min</span>
-                </div>
-                <div class="workout__details">
-                    <span class="workout__value">Elev Gain</span>
-                    <span class="workout__unit">min/km</span>
-                </div>
-            </li> --->
         </ul>
       <p class="copyright">
           &copy;Copyright by Alabi Ruqayyah. For her Javascript learning, the right and the effort of the original owner Jonas Schmedtmann is still reserved
